--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "astro": "^2.4.1",
     "bootstrap": "^5.2.3",
     "solid-js": "^1.7.5"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.4"
   }
 }
