--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "astro": "^2.4.1",
     "bootstrap": "^5.2.3",
+    "sass": "^1.62.1",
     "solid-js": "^1.7.5"
   },
   "devDependencies": {
